<?xml version="1.0" encoding="utf-8"?>
<!--
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_quiz"
    tools:context="none.laforge.tmntquiz.QuizActivity">

    <TextView
        android:text="@string/display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
-->

<LinearLayout
    xmlns:android ="http://schemas.android.com/apk/res/android"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    android:gravity         ="center"
    android:orientation     ="vertical"
    android:background      ="#999999">

    <TextView
        android:id              ="@+id/question_text_view"
        android:layout_width    ="wrap_content"
        android:layout_height   ="wrap_content"
        android:padding         ="12dp"/>

    <LinearLayout
        android:layout_width    ="wrap_content"
        android:layout_height   ="wrap_content"
        android:orientation     ="horizontal">

        //Blue button
        <Button
            android:id              ="@+id/blue_button"
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:text            ="@string/blue_button"/>

        //Red button
        <Button
            android:id              ="@+id/red_button"
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:text            ="@string/red_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width    ="wrap_content"
        android:layout_height   ="wrap_content"
        android:orientation     ="horizontal">

        //Orange button
        <Button
            android:id              ="@+id/orange_button"
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:text            ="@string/orange_button"/>

        //Purple button
        <Button
            android:id              ="@+id/purple_button"
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:text            ="@string/purple_button"/>
    </LinearLayout>

    //Next button
    <Button
        android:id              ="@+id/next_button"
        android:layout_width    ="wrap_content"
        android:layout_height   ="wrap_content"
        android:text            ="@string/next_button"/>

</LinearLayout>